# sansio

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cargo.yml
examples/: Cargo.toml  README.md  chat_server_udp.rs
examples/examples/: chat_client_tcp.rs  chat_client_udp.rs  chat_server_tcp.rs  chat_server_tcp_bootstrap.rs  chat_server_tcp_raw.rs  chat_server_udp.rs  chat_server_udp_bootstrap.rs  chat_server_udp_raw.rs
examples/examples/tbd/: chat_server_tcp.rs
examples/helpers/: mod.rs
examples/helpers/byte_to_message_decoder/: line_based_frame_decoder.rs  mod.rs
examples/helpers/string_codec/: mod.rs
examples/helpers/transport/: mod.rs
examples/src/: lib.rs
sansio/: Cargo.toml  README.md
sansio-bootstrap/: Cargo.toml
sansio-bootstrap/src/: lib.rs
sansio-bootstrap/src/bootstrap_tcp/: bootstrap_tcp_client.rs  mod.rs
sansio-bootstrap/src/bootstrap_udp/: bootstrap_udp_client.rs  mod.rs
sansio-codec/: Cargo.toml  README.md
sansio-codec/src/: lib.rs
sansio-codec/src/byte_to_message_decoder/: line_based_frame_decoder.rs  mod.rs
sansio-codec/src/string_codec/: mod.rs
sansio-codec/src/transport/: mod.rs
sansio-executor/: Cargo.toml
sansio-executor/src/: lib.rs
sansio-rt/: Cargo.toml  README.md
sansio-rt/doc/: LocalExecutor.md
sansio-rt/src/: lib.rs  smol.rs  tokio.rs
sansio-transport/: Cargo.toml
sansio-transport/src/: cmsg.rs  fallback.rs  lib.rs  proto.rs  unix.rs  windows.rs
sansio-transport/src/runtime/: mod.rs
sansio-transport/tests/: async_io_test.rs
sansio/src/: arc_pipeline.rs  arc_pipeline_internal.rs  handler.rs  handler_internal.rs  lib.rs  pipeline.rs  pipeline_internal.rs  protocol.rs  rc_pipeline.rs  rc_pipeline_internal.rs
src/: handler.rs  lib.rs  pipeline.rs  protocol.rs
