[package]
name = "sansio"
version = "0.0.3"
authors = ["Rain Liu <y@liu.mx>"]
edition = "2024"
description = "Rust in Sans-IO"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/sansio"
homepage = "https://sansio.org"
repository = "https://github.com/rainliu/sansio"
keywords = ["sans-io"]
categories = [ "network-programming" ]

[dependencies]
