[package]
name = "sansio"
version = "1.0.0"
authors = ["Rain Liu <y@liu.mx>"]
edition = "2024"
description = "sansio — an architectural pattern for writing protocol implementations that are completely decoupled from I/O operations"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/sansio"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/sansio"
keywords = ["sansio", "networking", "protocols"]
categories = ["network-programming"]

[dependencies]
