[package]
name = "sansio-bootstrap"
version = "0.6.0"
authors = ["Rain Liu <y@liu.mx>"]
edition = "2024"
description = "sansio bootstrap for TCP and UDP"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/sansio-bootstrap"
homepage = "https://webrtc.rs"
repository = "https://github.com/webrtc-rs/sansio"
keywords = ["sansio", "bootstrap"]
categories = ["asynchronous", "network-programming"]

[dependencies]
sansio = { path = "../sansio", version = "0.6.0" }
sansio-executor = { path = "../sansio-executor", version = "0.6.0" }
sansio-transport = { path = "../sansio-transport", version = "0.6.0" }

bytes = "1.11.0"
wg = { version = "0.9.2", features = ["future"] }
log = "0.4.28"
tokio = { version = "1.48.0", features = ["net", "time", "io-util", "sync", "macros"] }
