[package]
name = "sansio-executor"
version = "0.3.0"
authors = ["Rain Liu <y@liu.mx>"]
edition = "2024"
description = "sansio executor"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/sansio-executor"
homepage = "https://sansio.org"
repository = "https://github.com/sansio-org/sansio"
keywords = ["sansio", "executor", "async", "tokio"]
categories = ["asynchronous", "network-programming"]

[dependencies]
scoped-tls = "1.0.1"
core_affinity = "0.8.3"
tokio = { version = "1.48.0", features = ["rt", "sync", "macros"] }
