[package]
name = "sansio-rt"
version = "0.0.6"
authors = ["Rain Liu <y@liu.mx>"]
edition = "2024"
description = "Runtime abstraction for sansio - supports smol and tokio"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/sansio-rt"
homepage = "https://sansio.org"
repository = "https://github.com/sansio-org/sansio"
keywords = ["sansio", "runtime", "executor", "async"]
categories = ["asynchronous", "network-programming"]

[dependencies]
scoped-tls = "1"
core_affinity = "0.8"

# Runtime: smol (default)
smol = { version = "2", optional = true }
futures-lite = { version = "2", optional = true }

# Runtime: tokio (optional)
tokio = { version = "1", features = ["rt", "sync", "macros"], optional = true }

[features]
# Default: Use smol's LocalExecutor (lightweight, minimal dependencies)
default = ["runtime-smol"]

# Use smol's LocalExecutor for local task execution
runtime-smol = ["smol", "futures-lite"]

# Use tokio's LocalSet for local task execution
# Note: Cannot be used together with runtime-smol
runtime-tokio = ["tokio"]
