[package]
name = "sansio-transport"
version = "0.5.0"
authors = ["Rusty Rain <y@liu.mx>"]
edition = "2024"
description = "Asynchronous transports with ECN information"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/sansio-transport"
repository = "https://github.com/sansio/sansio-transport"
homepage = "https://sansio.org"
keywords = ["networking", "protocols"]
categories = [ "network-programming", "asynchronous" ]

[dependencies]
bytes = "1.11.0"
libc = "0.2.153"
socket2 = "0.5.6"
tracing = "0.1.40"
tokio = { version = "1.48.0", features = ["net", "time", "io-util", "sync", "macros"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Networking_WinSock"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.80"
env_logger = "0.11.3"
log = "0.4.21"